# htagui

./: .gitignore  LICENSE  README.md  if_you_want_swiper.py  manual_ifields.py  manual_iinputs.py  manual_tests.py  pyproject.toml  test_crayons.html  test_fast.html  test_fluent.html  test_kor.html  test_md.html  test_simple.py
.github/workflows/: update_version.py
htagui/: __init__.py  all.py  common.py  containers.py  dialog.py  fileupload.py  flex.py  form.py  ifields.py  javascripts.py  sortables.py  splitters.py  swipers.py  tabs.py  uiservice.py
htagui/basics/: __init__.py  bases.py
htagui/basics/bases/: __init__.py
htagui/bulma/: __init__.py  bases.py
htagui/bulma/bases/: __init__.py
htagui/fluent/: __init__.py  bases.py
htagui/md/: __init__.py  bases.py
htagui/no_bulma/: __init__.py
htagui/shoelace/: __init__.py  bases.py
htagui/shoelace/bases/: __init__.py
htagui_tests/: README.md
htagui_tests/shoelace/: __init__.py
